-
Bug
-
Resolution: Done
-
P4: Low
-
5.2.0
-
None
-
Windows 7 64-bit, Qt Creator, minGW (also msvc)
-
db98d65415b270f49e015154a37a39befc8c752e (dev, 12.2.2014, 5.3)
Debug assertion in QString::at() triggered when called from addFontToDatabase() (file qwindowsfontdatabase, line 847) when familyName string is empty.
Message:
ASSERT: "uint
< uint(size())" in file c:\work\build\qt5_workdir\w\s\qtbase\include\qtcore\../../src/corelib/tools/qstring.h, line 755
Because of this problem application crashes when debugging with minGW.
With msvc it is possible to ignore it and continue debugging.
The problem is most likely caused by a strange font installed on my PC.
Suggestion for fixing:
Add check ' familyName.size() > 0 || ' before 'familyName.at(0) == QLatin1Char('@')' to exit if empty string is received.