Windows: Fix potential crash in font database when family name is empty.

Task-number: QTBUG-36651

Change-Id: Icd3edc7dbed3e692b32374b0ab6251e7f939589d
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: db98d65415b270f49e015154a37a39befc8c752e https://github.com/qt/qtbase/commit/db98d65415b270f49e015154a37a39befc8c752e