src/plugins/platforms/windows/qwindowsfontdatabase.cpp
@@ -3876,6 +3876,11 @@ if|if
 condition|(
 name|familyName
 operator|.
+name|isEmpty
+argument_list|()
+operator|||
+name|familyName
+operator|.
 name|at
 argument_list|(
 literal|0
