src/plugins/platforms/windows/qwindowsfontdatabase_ft.cpp
@@ -384,6 +384,11 @@ if|if
 condition|(
 name|familyName
 operator|.
+name|isEmpty
+argument_list|()
+operator|||
+name|familyName
+operator|.
 name|at
 argument_list|(
 literal|0
